--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +38,7 @@
       "react-app/jest"
     ]
   },
+  "homepage": "https://patiname.github.io/pati-movie/",
   "browserslist": {
     "production": [
       ">0.2%",
