--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://612dd810673ded97e53c3e1e--goofy-volhard-8942b8.netlify.app/",
+  "homepage": "https://patimovie.netlify.app",
   "browserslist": {
     "production": [
       ">0.2%",
